--- a/app/src/main/res/layout/activity_poster.xml
+++ b/app/src/main/res/layout/activity_poster.xml
@@ -1,10 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout
+<merge
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/activity_poster"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
     tools:context=".PosterActivity">
 
     <ProgressBar
@@ -20,4 +18,4 @@
         android:scaleType="centerInside"
         android:contentDescription="@string/movie_poster_description" />
 
-</FrameLayout>
+</merge>
