*ADDED: Landscape UI for Movie View.
Implemented a better landscape UI for the Main Activity. Movie Posters are shown in a 2-column grid in portrait, while in landscape we use a horizontal linear layout instead.

--- a/app/src/main/res/layout-land/activity_main.xml
+++ b/app/src/main/res/layout-land/activity_main.xml
@@ -10,8 +10,8 @@
         android:id="@+id/rv_movies"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        app:layoutManager="GridLayoutManager"
-        app:spanCount="2" />
+        app:layoutManager="LinearLayoutManager"
+        android:orientation="horizontal" />
 
     <include layout="@layout/conn_error" />
 
