--- a/app/src/main/res/layout-land/view_movie.xml
+++ b/app/src/main/res/layout-land/view_movie.xml
@@ -3,12 +3,12 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/view_movie"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_width="wrap_content"
+    android:layout_height="match_parent">
 
     <ImageView
         android:id="@+id/iv_movie"
-        app:layout_widthPercent="100%"
+        app:layout_heightPercent="100%"
         app:layout_aspectRatio="67%"
         android:contentDescription="@string/movie_poster_description" />
 
