--- a/app/src/main/res/layout-land/view_movie.xml
+++ b/app/src/main/res/layout-land/view_movie.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.percent.PercentFrameLayout
+<android.support.constraint.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/view_movie"
@@ -8,8 +8,11 @@
 
     <ImageView
         android:id="@+id/iv_movie"
-        app:layout_heightPercent="100%"
-        app:layout_aspectRatio="67%"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintDimensionRatio="2:3"
         android:contentDescription="@string/movie_poster_description" />
 
-</android.support.percent.PercentFrameLayout>
+</android.support.constraint.ConstraintLayout>
