Naming scheme refactoring.
Use 'item_' prefix for RecyclerView elements instead of 'view_'. Reserve 'view_' for custom Views.
Use 'layout_WHERE_WHAT' naming scheme for include layouts. It is a bit verbose but it will have to do for now.

--- a/app/src/main/res/layout-land/activity_main.xml
+++ b/app/src/main/res/layout-land/activity_main.xml
@@ -13,6 +13,6 @@
         app:layoutManager="LinearLayoutManager"
         android:orientation="horizontal" />
 
-    <include layout="@layout/conn_error" />
+    <include layout="@layout/layout_main_error" />
 
 </merge>
