--- a/app/src/main/res/layout/layout_main_error.xml
+++ b/app/src/main/res/layout/layout_main_error.xml
@@ -5,21 +5,20 @@
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:layout_gravity="center"
-    android:orientation="vertical"
-    android:visibility="invisible">
+    android:orientation="vertical">
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_horizontal"
-            android:text="@string/tv_net_error"
-            style="@style/Base.TextAppearance.AppCompat.Medium" />
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal"
+        android:text="@string/tv_net_error"
+        style="@style/Base.TextAppearance.AppCompat.Medium" />
 
-        <Button
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_horizontal"
-            android:text="@string/btn_reload"
-            android:onClick="reload" />
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal"
+        android:text="@string/btn_reload"
+        android:onClick="reload" />
 
 </LinearLayout>
