--- a/app/src/main/res/layout/activity_details.xml
+++ b/app/src/main/res/layout/activity_details.xml
@@ -39,7 +39,8 @@
                 android:layout_marginRight="@dimen/activity_horizontal_margin"
                 android:layout_marginEnd="@dimen/activity_horizontal_margin"
                 android:adjustViewBounds="true"
-                android:contentDescription="@string/movie_poster_description" />
+                android:contentDescription="@string/movie_poster_description"
+                tools:src="@drawable/ic_broken_image_white_48dp" />
 
             <TextView
                 android:id="@+id/textview_details_releasedate"
