--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -11,8 +11,8 @@
             android:title="@string/sort_popular"
             app:showAsAction="never" />
         <item
-            android:id="@+id/sort_rating"
-            android:title="@string/sort_rating"
+            android:id="@+id/sort_top_rated"
+            android:title="@string/sort_top_rated"
             app:showAsAction="never" />
         <item
             android:id="@+id/sort_favorites"
